--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ requests==2.24.0
 requests-oauthlib==1.3.0
 tweepy==3.9.0
 gunicorn==19.9.0
+SQLAlchemy==1.3.20
+flask-sqlalchemy==2.4.4
+Mako==1.1.3
+alembic==1.4.3
+flask-migrate==2.5.3
+python-dateutil==2.8.1
+python-editor==1.0.4
